--- a/index.html
+++ b/index.html
@@ -28,23 +28,23 @@
         <h2>Compétences</h2>
         <ul>
             <li>C</li>
-                        <img src="images/c-logo.png" alt="Language C">
+                        <img src="images/c-logo.png" alt="Language C" width="200" height="100">
             <li>C++</li>
-            <img src="images/c++-logo.png" alt="Language C++">
+            <img src="images/c++-logo.png" alt="Language C++" width="200" height="100">
             <li>JavaScript</li>
-            <img src="images/JavaScript-logo.png" alt="Language Java">
+            <img src="images/JavaScript-logo.png" alt="Language Java" width="200" height="100">
             <li>HTML</li>
-            <img src="images/html-logo.webp.png" alt="Language HTML">
+            <img src="images/html-logo.webp.png" alt="Language HTML" width="200" height="100">
             <li>CSS</li>
-            <img src="images/css-logo.png" alt="Language CSS">
+            <img src="images/css-logo.png" alt="Language CSS" width="200" height="100">
             <li>MySQL</li>
-            <img src="images/mysql-logo.png" alt="Base de données MySQL">
+            <img src="images/mysql-logo.png" alt="Base de données MySQL" width="200" height="100">
             <li>Node.js</li>
-            <img src="images/node-js-logo.png" alt="Node JS">
+            <img src="images/node-js-logo.png" alt="Node JS" width="200" height="100">
             <li>React Native</li> 
-            <img src="images/React_Native_2_.png" alt="React Native">
+            <img src="images/React_Native_2_.png" alt="React Native" width="200" height="100">
             <li>Qt</li>
-            <img src="images/Qt-Creator-Logo.png" alt="QT">
+            <img src="images/Qt-Creator-Logo.png" alt="QT" width="200" height="100">
             <!-- Ajoutez d'autres compétences ici -->
         </ul>
     </section>
