--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li>JavaScript</li>
             <img src="images/JavaScript-logo.png" alt="Language Java" width="200" height="200">
             <li>HTML</li>
-            <img src="images/html-logo.webp.png" alt="Language HTML" width="200" height="200">
+            <img src="images/html-logo.png" alt="Language HTML" width="200" height="200">
             <li>CSS</li>
             <img src="images/css-logo.png" alt="Language CSS" width="200" height="200">
             <li>MySQL</li>
