--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Mon Portfolio</h1>
+        <h1>Portfolio</h1>
         <nav>
             <ul>
                 <li><a href="#about">À propos</a></li>
@@ -21,7 +21,8 @@
 
     <section id="about">
         <h2>À propos de moi</h2>
-        <p>Je suis étudiant en seconde année de BTS Systèmes Numériques Informatique et Réseaux, passionné par le développement, notamment le développement mobile. J'ai une expérience pratique dans le développement d'applications Android, notamment avec React Native.</p>
+        <p>Je suis étudiant en seconde année de BTS Systèmes Numériques Informatique et Réseaux, passionné par le développement, notamment le développement mobile.</p>
+        <p>     J'ai une expérience pratique dans le développement d'applications Android, notamment avec React Native.</p>
     
         <h3>Parcours Scolaire</h3>
         <ul>
@@ -31,6 +32,7 @@
     
         <h3>Expérience Professionnelle</h3>
         <ul>
+            <li>Stagiaire en communication - Mairie de Villepinte - Janvier 2018</li>
             <li>Stagiaire en support Informatique - Hopital privé du Vert-Galant - Mai 2023 - Juin 2023</li>
             <!-- Ajoutez d'autres expériences professionnelles si nécessaire -->
         </ul>
@@ -74,7 +76,7 @@
             </div>
             <div class="skill">
                 <img src="images/Qt-Creator-Logo.png" alt="QT" width="200" height="200">
-                <p>Qt</p>
+                <p>QT</p>
             </div>
             <!-- Ajoutez d'autres compétences ici -->
         </div>
