--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Portfolio</h1>
+        <h1>PORTFOLIO</h1>
         <nav>
             <ul>
                 <li><a href="#about">À propos</a></li>
@@ -22,7 +22,7 @@
     <section id="about">
         <h2>À propos de moi</h2>
         <p>Je suis étudiant en seconde année de BTS Systèmes Numériques Informatique et Réseaux, passionné par le développement, notamment le développement mobile.</p>
-        <p>     J'ai une expérience pratique dans le développement d'applications Android, notamment avec React Native.</p>
+        <p>Futur étudiant en Bachelor Développement fullstack & DevOps à IPSSI, je suis actuellement à la recherche d'une entreprise pour une alternance </p>
     
         <h3>Parcours Scolaire</h3>
         <ul>
@@ -43,39 +43,39 @@
         <h2>Compétences</h2>
         <div class="skills-container">
             <div class="skill">
-                <img src="images/c-logo.png" alt="Language C" width="180" height="200">
+                <img src="images/c-logo.png" alt="Language C" width="70" height="70">
                 <p>C</p>
             </div>
             <div class="skill">
-                <img src="images/c++-logo.png" alt="Language C++" width="175" height="200">
+                <img src="images/c++-logo.png" alt="Language C++" width="67" height="70">
                 <p>C++</p>
             </div>
             <div class="skill">
-                <img src="images/JavaScript-logo.png" alt="Language JavaScript" width="200" height="200">
+                <img src="images/JavaScript-logo.png" alt="Language JavaScript" width="70" height="70">
                 <p>JavaScript</p>
             </div>
             <div class="skill">
-                <img src="images/html-logo.png" alt="Language HTML" width="200" height="200">
+                <img src="images/html-logo.png" alt="Language HTML" width="70" height="70">
                 <p>HTML</p>
             </div>
             <div class="skill">
-                <img src="images/css-logo.png" alt="Language CSS" width="200" height="200">
+                <img src="images/css-logo.png" alt="Language CSS" width="70" height="70">
                 <p>CSS</p>
             </div>
             <div class="skill">
-                <img src="images/mysql-logo.png" alt="Base de données MySQL" width="200" height="200">
+                <img src="images/mysql-logo.png" alt="Base de données MySQL" width="70" height="70">
                 <p>MySQL</p>
             </div>
             <div class="skill">
-                <img src="images/node-js-logo.png" alt="Node JS" width="200" height="200">
+                <img src="images/node-js-logo.png" alt="Node JS" width="70" height="70">
                 <p>Node JS</p>
             </div>
             <div class="skill">
-                <img src="images/react-native-logo.png" alt="React Native" width="200" height="200">
+                <img src="images/react-native-logo.png" alt="React Native" width="70" height="70">
                 <p>React Native</p>
             </div>
             <div class="skill">
-                <img src="images/Qt-Creator-Logo.png" alt="QT" width="200" height="200">
+                <img src="images/Qt-Creator-Logo.png" alt="QT" width="70" height="70">
                 <p>QT</p>
             </div>
             <!-- Ajoutez d'autres compétences ici -->
@@ -103,7 +103,7 @@
         <p>Email : mohamed.boulatika04@gmail.com</p>
         <p>Téléphone : +33652877379</p>
         <p><a href="https://github.com/mohamed-044">GitHub</a></p>
-        <p><a href="www.linkedin.com/in/mohamed-boulatika-53042226b">LinkedIn</a></p>
+        <p><a href="https://www.linkedin.com/in/mohamed-boulatika-53042226b">LinkedIn</a></p>
         <!-- Ajoutez d'autres informations de contact si nécessaire -->
     </footer>
 </body>
